# merakilabs-ps3

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  logging_config.py  main.py  schemas.py
backend/agent/: agent.py  deps.py  output.py  prompts.py  tools.py
backend/ingestion/: chunker.py  models.py  parser.py
backend/retrieval/: embedder.py  retriever.py  store.py
backend/routes/: documents.py  messages.py  sessions.py
backend/session/: models.py  store.py
eval/: README.md  runner.py
eval/dataset/: SCHEMA.md  adversarial.jsonl  questions.jsonl
eval/metrics/: citation_check.py  clarification.py  doc_filter_correct.py  faithfulness.py  iterative_retrieval_used.py  refusal.py  retrieval.py  task_completion.py  tool_selection.py
frontend/: streamlit_app.py
tests/: conftest.py  test_agent_output.py  test_agent_run_wrapper.py  test_agent_smoke.py  test_chunk_model.py  test_chunker.py  test_config.py  test_embedder.py  test_eval_citation_check.py  test_eval_deterministic_metrics.py  test_eval_faithfulness.py  test_eval_refusal_clarification.py  test_eval_retrieval.py  test_eval_task_completion.py  test_health.py  test_logging.py  test_main_wiring.py  test_parser.py  test_retriever.py  test_routes_documents.py  test_routes_messages.py  test_routes_sessions.py  test_session_store.py  test_store.py  test_tools_calculate.py  test_tools_retrieve.py  test_tools_websearch.py
